Add permission requests for Android 6+
* Add request for the camera

Signed-off-by: goapunk <noobie@goapunks.net>

--- a/briar-android/src/main/res/values/strings.xml
+++ b/briar-android/src/main/res/values/strings.xml
@@ -381,4 +381,11 @@
 	<string name="screen_filter_title">Screen overlay detected</string>
 	<string name="screen_filter_body">Another app is drawing on top of Briar. To protect your security, Briar will not respond to touches when another app is drawing on top.\n\nTry turning off the following apps when using Briar:\n\n%1$s</string>
 
+	<!-- Permission Requests and Doze Mode -->
+	<string name="permission_camera_title">Camera permission</string>
+	<string name="permission_camera_request_text">To scan the QR code, Briar needs access to the camera.</string>
+	<string name="permission_camera_perm_denied">You have denied access to the camera, but adding contacts requires using the camera. Please consider granting access.</string>
+	<string name="permission_camera_denied_toast">Camera permission was not granted</string>
+	<string name="open_settings">Open Settings</string>
+
 </resources>
